--- a/advanced-serach-company-name.html
+++ b/advanced-serach-company-name.html
@@ -200,7 +200,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </tr>
         </tbody>
       </table>
-      <p class="popupFrame" id="popupInfo_1">aaThe purpose of Slider Kit is to gather common slideshow-like jQuery functionalities (such as news sliders, photos galleries/sliders, carousels, tabs menus)</p>
+      <p class="popupFrame" id="popupInfo_1">The purpose of Slider Kit is to gather common slideshow-like jQuery functionalities (such as news sliders, photos galleries/sliders, carousels, tabs menus)</p>
       <p class="popupFrame" id="popupInfo_2">The purpose of Slider Kit is to gather common slideshow-like jQuery functionalities (such as news sliders, photos galleries/sliders, carousels, tabs menus)</p>
     </div>
   </div>
